Correcting styles on mobile that got corrupted as a result of organization

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -56,6 +56,6 @@ body {
 /* Mobiles */
 @media (max-width: 640px) {
     .card {
-        max-width: 100%;
+        width: 100%;
     }
 }
